# dotfiles

./: .gitignore  README.md  install.sh  settings.json  setup.sh
scripts/: cspell  install-zsh.sh
templates/: README.md
templates/coverage/cpython/: .clang-format  Makefile  README.md  pyproject.toml  setup.py
templates/coverage/cpython/src/my_module/: __main__.py
templates/coverage/cpython/src/my_module/lib/: __init__.pyi  core.cpp
templates/coverage/cpython/tests/: requirements.txt  test_api.py
templates/coverage/cython/: README.md  pyproject.toml  setup.py
templates/coverage/cython/src/my_module/: lib.pyi
templates/coverage/cython/src/my_module/lib/: main.c  main.pyx
templates/coverage/cython/tests/: lib_test.py
templates/docker/fastapi-vite-app/: README.md  docker-compose.yaml
templates/docker/fastapi-vite-app/api/: Dockerfile
templates/docker/fastapi-vite-app/api/app/: main.py
templates/docker/pytorch/: README.md  docker-compose.yaml
templates/docker/pytorch/api/: Dockerfile  requirements.txt
templates/docker/pytorch/api/app/: main.py
templates/docker/pytorch/client/: Dockerfile  nginx.conf  package-lock.json  package.json
templates/docker/pytorch/client/src/: App.tsx
templates/kubernetes/fastapi-redis-postgres/: Dockerfile  README.md  requirements.txt
templates/kubernetes/fastapi-redis-postgres/api/: main.py
templates/kubernetes/fastapi-redis-postgres/helm-charts/: Chart.yaml  values.yaml
templates/kubernetes/fastapi-redis-postgres/helm-charts/charts/: common-2.4.0.tgz  postgresql-12.5.5.tgz  redis-17.11.3.tgz
templates/kubernetes/fastapi-redis-postgres/helm-charts/templates/: _helpers.tpl  deployment.yaml
vscode/: dictionary.txt  settings.json  settings.jsonc
zsh/: .zshrc
